--- a/src/Components/mapstyle.css
+++ b/src/Components/mapstyle.css
@@ -1,3 +1,13 @@
 .pad {
-    padding-top: 4.75rem;
+    padding: 2rem;
+}
+
+.buttonPad {
+    padding-left: 3px;
+    padding-right: 3px;
+}
+
+.center {
+    display: flex; 
+    justify-content: center; 
 }
